# mini-bot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  bad-words.url  build.rs
.github/workflows/: img.yml
src/: args.rs  cli.yaml  main.rs
src/handler/: mod.rs
