[package]
name = "mini-bot"
version = "0.3.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
html2text = "*"
serenity = {version="*", default-features = false, features = ["client", "gateway", "rustls_backend", "model"]}
reqwest = "*"
rust-bert = "*"
tokio = {version="*", features=["macros","rt-multi-thread"]}
clap = {version = "*", features = ["yaml"]}
chrono = "*"